# EmbeddedPorting

.github/workflows/: target_build.yml  zephyr_migration.yml
PCIe/: 2026-03-24_12-59-21_Features.csv  2026-03-25_Features.csv
RTOS/zephyr_migration/: CMakeLists.txt  MANIFEST.txt  MIGRATION_NOTES.md  README.md  prj.conf  report.json
RTOS/zephyr_migration/boards/: stm32f4_disco.overlay
RTOS/zephyr_migration/include/: app_types.h  legacy_shims.h
RTOS/zephyr_migration/src/: main.c
RTOS/zephyr_migration/src/control/: sys_control.c  sys_control.h
RTOS/zephyr_migration/src/misc/: misc.c  misc.h
RTOS/zephyr_migration/src/sensors/: humidity.c  humidity.h  light.c  light.h  pressure.c  pressure.h  temperature.c  temperature.h
RTOS/zephyr_migration/src/storage/: storage.c  storage.h
RTOS/zephyr_migration/src/util/: avg_list.c  avg_list.h
RTOS/zephyr_migration/src/watchdog/: wdt.c  wdt.h
docs/: testcase_summary.csv
mpsoc_output/: 2026-03-26_06-27-30_GPIO_TestPlan.csv  2026-03-26_12-00-00_GPIO_TestPlan.csv  2026-03-26_12-14-22_GPIO_TestPlan.csv  2026-03-26_12-36-00_GPIO_TestPlan.csv
mpsoc_output/output/: test_gpio_negedge_intr_en.c  test_gpio_negedge_intr_en_test.c  test_gpio_pedge_all_pads_en.c  test_gpio_pedge_all_pads_en_test.c  test_gpio_reg_wr_rd_test.c
mpsoc_source/gpio/: GPIO_TestPlan.csv  GPIO_Test_Plan.xlsx  testcase_summary.xlsx
porting_runs/initial/: changes.diff  clocks_target.txt  environment_summary.txt  memmap_source.map  memmap_target.map  pinmux_target.csv  porting_delta_checklist.md  smoke_test_plan.txt  target_gap_report.md  (+2 more)
(+90 files in other folders)
